Do not vacuum database automatically.  Instead, add a "vacuum database" menu item.  Also, minor GUI tweaks, per Paul Poast's request.

--- a/NewGeneUI/Resources/NewGeneResources.qrc
+++ b/NewGeneUI/Resources/NewGeneResources.qrc
@@ -7,5 +7,6 @@
         <file>earth.tunnel.jpg</file>
         <file>spinner.gif</file>
         <file>ajax-loader.gif</file>
+        <file>bluespinner.gif</file>
     </qresource>
 </RCC>
