--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
@@ -47,6 +47,9 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
+      <property name="spacing">
+       <number>1</number>
+      </property>
       <item>
        <widget class="QLabel" name="label">
         <property name="autoFillBackground">
@@ -102,7 +105,7 @@
           <number>0</number>
          </property>
          <property name="bottomMargin">
-          <number>0</number>
+          <number>1</number>
          </property>
          <item>
           <spacer name="horizontalSpacer">
@@ -112,7 +115,7 @@
            <property name="sizeHint" stdset="0">
             <size>
              <width>40</width>
-             <height>20</height>
+             <height>1</height>
             </size>
            </property>
           </spacer>
@@ -122,7 +125,7 @@
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>20</height>
+             <height>19</height>
             </size>
            </property>
            <property name="text">
@@ -138,6 +141,12 @@
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -146,8 +155,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>541</width>
-        <height>354</height>
+        <width>543</width>
+        <height>361</height>
        </rect>
       </property>
      </widget>
