--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -174,6 +174,7 @@
     <addaction name="actionSave_Input_Dataset_As"/>
     <addaction name="actionClose_Current_Input_Dataset"/>
     <addaction name="actionDisplay_input_dataset_path"/>
+    <addaction name="actionVacuum_input_database"/>
    </widget>
    <widget class="QMenu" name="menuOutput">
     <property name="title">
@@ -184,6 +185,7 @@
     <addaction name="actionSave_Output_Dataset_As"/>
     <addaction name="actionClose_Current_Output_Dataset"/>
     <addaction name="actionDisplay_output_dataset_path"/>
+    <addaction name="actionVacuum_output_database"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -249,6 +251,16 @@
   <action name="actionAbout_NewGene">
    <property name="text">
     <string>About NewGene ...</string>
+   </property>
+  </action>
+  <action name="actionVacuum_input_database">
+   <property name="text">
+    <string>Vacuum input database...</string>
+   </property>
+  </action>
+  <action name="actionVacuum_output_database">
+   <property name="text">
+    <string>Vacuum output database...</string>
    </property>
   </action>
  </widget>
