Per Paul's request, improve error message when more than one DMU has its k-value set above the minimum.  Also, remove single-quote in text such as "DMU's", "UOA's", and "VG's" throughout the GUI.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>&lt;b&gt;Limit DMU's&lt;/b&gt;</string>
+      <string>&lt;b&gt;Limit DMUs&lt;/b&gt;</string>
      </property>
      <property name="textFormat">
       <enum>Qt::RichText</enum>
