--- a/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/DMUs/newgenemanagedmus.ui
@@ -47,7 +47,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#101078;&quot;&gt;Decision Making Units (DMU's):&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:600; color:#101078;&quot;&gt;Decision Making Units (DMUs):&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="textFormat">
          <enum>Qt::RichText</enum>
