Prepare for optimizing NewGene to support breaking the run into multiple pieces - one per primary time unit - in order to dump memory after every time unit to avoid memory crash for relatively lengthy time spans (i.e., multiple days, months, years, etc.).

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
@@ -225,16 +225,14 @@
         <item>
          <widget class="QCheckBox" name="mergeIdenticalRows">
           <property name="text">
-           <string>Consolidate identical adjacent output rows
-(recommended except for exact statistical analysis)</string>
+           <string>Consolidate identical adjacent output rows</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="displayAbsoluteTimeColumns">
           <property name="text">
-           <string>Show absolute time columns for every row
-(useful for exact statistical analysis)</string>
+           <string>Show absolute time columns for every row</string>
           </property>
          </widget>
         </item>
