Work on the next task in the final list provided by Paul - support user-defined and modifiable notes associated with each variable group.  Begin by taking advantage of currently-unused (but planned for use in the future from the beginning, such as now!) three fields in the database for each variable group - in this case, the first of these currently-unused fields (called, in fact, "Notes 1" and supporting 16,384 characters, plenty of space).  Work on simply investigating the existing code infrastructure and tying in display of the notes field in existing data structures in the various GUI-layer widgets.  As of this commit, when manually adding a note into the database for a VG using SQLite Expert Professional and then running NewGene, the note does appear in the GUI as expected.  Next up: support the ability of the end-user to add/modify a note for each given VG.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
@@ -27,6 +27,13 @@
     <number>20</number>
    </property>
    <item>
+    <widget class="QLabel" name="variableGroupNotes">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QListView" name="listView"/>
    </item>
    <item>
