Implement a final set of tasks requested by Paul.  Separate out the 'VG warning' into its own settings dialog.  Place the currently-active VG's warning text in the bottom of the blue spinner widget box.  Format this with coloration and as rich text.  Make it clickable in case the text is too long to fit in the box, with modified formatting for the popup dialog.  Change the splash screen to remove the loading of the HTML from Google Docs, which is broken - and Paul doesn't care about setting up a server, so just add a clickable link on the splash screen that says 'Why NewGene?'.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -221,6 +221,25 @@
         </item>
        </layout>
       </widget>
+      <widget class="MyClickableLabel" name="labelVariableGroupWarning">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>40</y>
+         <width>471</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLabel {color: red;}</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
+       </property>
+      </widget>
      </widget>
     </widget>
    </item>
@@ -232,6 +251,11 @@
    <extends>QWidget</extends>
    <header>kadwidgetsscrollarea.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MyClickableLabel</class>
+   <extends>QLabel</extends>
+   <header location="global">myclickablelabel.h</header>
   </customwidget>
  </customwidgets>
  <resources>
