--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
@@ -225,14 +225,14 @@
         <item>
          <widget class="QCheckBox" name="mergeIdenticalRows">
           <property name="text">
-           <string>Consolidate identical adjacent output rows</string>
+           <string>Consolidate output (recommended)</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QCheckBox" name="displayAbsoluteTimeColumns">
           <property name="text">
-           <string>Show absolute time columns for every row</string>
+           <string>Include date/time columns</string>
           </property>
          </widget>
         </item>
