--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -16,6 +16,9 @@
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <property name="documentMode">
    <bool>true</bool>
   </property>
@@ -120,7 +123,11 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="NewGeneCreateOutput" name="CreateOutputPane" native="true"/>
+         <widget class="NewGeneCreateOutput" name="CreateOutputPane" native="true">
+          <property name="styleSheet">
+           <string notr="true">#CreateOutpuPane {border: 0px; padding: 0px; margin: 0px;}</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -164,6 +171,9 @@
      <width>1000</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <widget class="QMenu" name="menuInput">
     <property name="title">
