Resolve glitches revealed by or related to the Mac build, some harmless GUI glitches, other serious.  First, the Mac build has some text fields in the GUI that don't fit in the space and are cropped.  These are (at least in large part) resolved here (pending testing, though).  Second, though, the Mac build previously necessitated using a file extension of just .xml for both input and output projects, rather than .newgene.in.xml and .newgene.out.xml.  There are two bugs associated with this that are resolved in this commit (pending testing).  First, it is too easy for users to now 'open' an input file when intending to open an output file, and vice versa, which gave rise to a deceptive 'time range fields can't be found' error (when opening an output project file but selecting the input project file).  Second, there was a bug when creating a new or saving an existing input or output project file as a new file in which the proper, full file extension of 'newgene.in.xml' or '.newgene.out.xml' was not added, if necessary, to the file name.  Even thought the file extension is now just .xml for the File Open/Save dialogs, the extension is now enforced by the NewGene layer to be the full extensions noted.  This resolves the issues noted.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>491</width>
-    <height>80</height>
+    <height>100</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -63,8 +63,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>334</width>
-        <height>60</height>
+        <width>332</width>
+        <height>80</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -258,7 +258,7 @@
       <string notr="true"/>
      </property>
      <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+      <enum>QFrame::Box</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
