--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
@@ -59,10 +59,16 @@ stop:0.6 rgba(255, 255, 255, 0));
    </item>
    <item row="0" column="0">
     <widget class="KAdColumnSelectionBox" name="frameKAdSelectionArea">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>80</height>
+       <height>130</height>
       </size>
      </property>
      <property name="frameShape">
