"Request: It would be helpful if you could please make the following small ``tweak'' when preparing the final version: variable group 03a. is presently called ``Polity Regime Data''.  Could you please insert a roman numeral IV after the word ``Polity''?  Then it will read, ``03a. Polity IV Regime Data (Country-Year) (Country Year)''" - Apr 21 Question 1: Is it quick for for you to replace ``0'' values with empty (i.e. missing) values for a few variables?  If so, all values from 1995 to 2008  for the Polity III variables in the 01b. and 01c. variable groups? These variables are: A tester brought to my attention that I was using older MID data for variable group 06a.  Therefore, when making the updates, could you please update that variable group (in both the Windows and Mac versions) with the data in the attached csv file? - See May 3 entry for the data Memory overflow not being captured - Apr 6

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/optionsbox.ui
@@ -231,7 +231,7 @@
         <item>
          <widget class="QCheckBox" name="mergeIdenticalRows">
           <property name="text">
-           <string>Consolidate output (recommended)</string>
+           <string>Consolidate output</string>
           </property>
          </widget>
         </item>
